@@ -4,6 +4,8 @@
           that is always available (lerepp).
         - Fix error message in case of server error (500)
           response.
+        - Update to menu.js's removeItems function to only delete
+          direct childNodes aswell as a specification to test for it (lerepp)
 
 0.42 2021-06-18
         - Added GitHub based CI for perl.
